cmake_minimum_required(VERSION 3.13)
project(Boost.MultiIndex.Examples)
find_package(Boost REQUIRED COMPONENTS multi_index)
link_libraries(Boost::multi_index)
file(GLOB SOURCES "*.cpp")
foreach(SOURCE ${SOURCES})
    get_filename_component(EXEC_NAME ${SOURCE} NAME_WE)
    add_executable(${EXEC_NAME} ${SOURCE})
endforeach()